--- a/APP_JAVA/app/src/main/res/values/strings.xml
+++ b/APP_JAVA/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Projet_TER</string>
     <string name="add">+</string>
+    <string name="title_app">Argos</string>
 </resources>
