Restructuration du code et ajout des sliders (interface seulement)

--- a/APP_JAVA/app/src/main/res/values/strings.xml
+++ b/APP_JAVA/app/src/main/res/values/strings.xml
@@ -35,4 +35,7 @@
     <string name="sables">Sables</string>
     <string name="conglomera">Conglomerat</string>
     <string name="indeterminer">Indeterminé</string>
+    <string name="contour">Contour</string>
+    <string name="pr_cision">Précision</string>
+    <string name="taille_des_divisions">Taille des divisions</string>
 </resources>
